# novel_ai

./: .env  .env.example  .gitignore  .tool-versions  COMPLETED_TASKS.md  DEVELOPMENT_ROADMAP.md  DOCKER.md  NEXT_TASKS.md  README.md  TEST_COVERAGE_FINAL_REPORT.md  TEST_COVERAGE_REPORT.md  docker-compose.yml  test_gemini.py  test_llm.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
api-server/: .dockerignore  Dockerfile  build.gradle.kts  gradle.properties  settings.gradle.kts
api-server/src/main/resources/: application-prod.properties  application.properties  data.sql  logback-spring.xml
api-server/src/test/resources/: application-test.properties
frontend/: DESIGN_SYSTEM.md  Dockerfile  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/app/graph-timeline/: page.tsx
frontend/app/graph-view/: page.tsx
frontend/e2e/: auth.spec.ts  characters.spec.ts  responsive.spec.ts
frontend/lib/: graph.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/characters/: page.tsx
frontend/src/app/dialogue-stream/: page.tsx
frontend/src/app/episodes/: page.tsx
frontend/src/app/graph/: page.tsx  page.tsx.tmp.15204.1760923692027  page.tsx.tmp.15204.1760934105525
frontend/src/components/: AuthValidator.tsx  Button.tsx  Card.test.tsx  Card.tsx  CommandPalette.tsx  ErrorBoundary.tsx  ErrorMessage.test.tsx  ErrorMessage.tsx  GlobalKeyboardShortcuts.tsx  KeyboardShortcutsHelp.tsx  LoadingSpinner.test.tsx  LoadingSpinner.tsx  Navbar.tsx  Skeleton.test.tsx  Skeleton.tsx  Toast.test.tsx  Toast.tsx
frontend/src/contexts/: ProjectContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/data/: demoData.ts
frontend/src/hooks/: useKeyboardShortcut.ts
frontend/src/lib/: api.ts  auth.ts  env.ts  episode.ts  plot.ts  project.ts  search.ts
frontend/src/types/: index.ts  project.ts
llm-server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  coverage_report.md  pyproject.toml  requirements-dev.txt  requirements.txt
llm-server/app/: __init__.py  exceptions.py  main.py
llm-server/app/controllers/: dialogue_controller.py  episode_analysis_controller.py  scenario_controller.py  script_analysis_controller.py  streaming_controller.py  system_controller.py
llm-server/app/core/: __init__.py  cache_manager.py  config.py  llm_provider_manager.py  logging_config.py  metrics.py  rate_limiter.py
llm-server/app/middleware/: __init__.py  auth.py  request_id.py  security_headers.py
llm-server/app/models/: dialogue_models.py  episode_analysis_models.py  scenario_models.py  script_analysis_models.py
llm-server/app/services/: dialogue_service.py  episode_analysis_service.py  llm_service.py  prompt_builder.py  scenario_service.py  script_analysis_service.py
llm-server/app/utils/: __init__.py  error_handlers.py  json_parser.py  prompt_templates.py
llm-server/docs/: DEVELOPMENT.md
llm-server/tests/: __init__.py  conftest.py  test_json_parser.py  test_llm_provider.py  test_main.py  test_prompt_builder.py  test_security.py  test_services.py  test_streaming.py
llm-server/tests/e2e/: test_full_workflow.py
scripts/: backup-db.bat  backup-db.sh  restore-db.sh
(+167 files in other folders)
